--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@clack/prompts": "^0.7.0",
 		"dotenv": "^16.3.1",
+		"kolorist": "^1.8.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.2.2"
 	}
